--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@graphcms/rich-text-react-renderer": "^0.1.5",
+    "@material-ui/icons": "^4.11.2",
     "next": "latest",
     "react": "^17.0.2",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
