--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   },
   "dependencies": {
     "@graphcms/rich-text-react-renderer": "^0.1.5",
-    "@material-ui/icons": "^4.11.2",
     "next": "latest",
     "react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
