--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "@graphcms/rich-text-react-renderer": "^0.1.5",
-    "next": "latest",
+    "next": "^12.1.0",
     "react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.2",
